[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://survivor-idle_rifle_0.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 110, 80 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 140, 80 )

[node name="Player" type="Sprite"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Reload_speed" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
visible = false
position = Vector2( -20, 9.99999 )
shape = SubResource( 1 )

[node name="Death_delay" type="Timer" parent="Hitbox"]
wait_time = 0.5
one_shot = true

[node name="Hitbox_Nuke" type="Area2D" parent="." groups=["Activate_Nuke"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox_Nuke"]
position = Vector2( -1.43051e-05, 9.99999 )
scale = Vector2( 1, 1 )
shape = SubResource( 2 )

[connection signal="timeout" from="Reload_speed" to="." method="_on_Reload_speed_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="Hitbox/Death_delay" to="." method="_on_Death_delay_timeout"]
[connection signal="area_entered" from="Hitbox_Nuke" to="." method="_on_Hitbox_Nuke_area_entered"]
